# Infrastructure-devtools-libraries-packages-and-other-stuff.

./: README.md  launch_infra_manager.py  pyproject.toml
docs/: ai.md  ai_lab.md  architecture.md  automation.md  code_lab.md  datasets.md  extending.md  features.md  packaging.md  scheduling.md  theme.md
infra_manager/: __init__.py  __main__.py  app.py  bootstrap.py
infra_manager/core/: state.py
infra_manager/services/: automation.py
infra_manager/ui/: main_window.py  resources.py  theme.py
infra_manager/ui/widgets/: access_panel.py  advanced_feature_panel.py  ai_assistant_panel.py  ai_integration_panel.py  ai_lab_panel.py  ai_model_panel.py  ai_training_panel.py  ai_workflow_panel.py  async_jobs_panel.py  automation_panel.py  batch_panel.py  blueprint_panel.py  capability_panel.py  cards.py  cluster_panel.py  code_lab_panel.py  codebase_manager_panel.py  config_panel.py  cost_panel.py  data_pipeline_panel.py  deployment_panel.py  logging_panel.py  notification_panel.py  observability_panel.py  performance_panel.py  pipeline_panel.py  repo_panel.py  runbook_panel.py  scheduler_panel.py  security_panel.py  service_mesh_panel.py  tenant_panel.py  vps_panel.py  workflow_panel.py
src/infra_manager/core/: state.py
src/infra_manager/services/: ai.py
src/infra_manager/ui/widgets/: advanced_feature_panel.py  ai_assistant_panel.py  ai_model_panel.py  async_jobs_panel.py  batch_panel.py  cards.py  cluster_panel.py  config_panel.py  data_pipeline_panel.py  logging_panel.py  performance_panel.py  runbook_panel.py  security_panel.py  service_mesh_panel.py  vps_panel.py  (+1 more)
